; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_UdpAccel.c_UdpAccelCalcKey.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_UdpAccel.c_UdpAccelCalcKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UDP_ACCELERATION_COMMON_KEY_SIZE = common dso_local global i32 0, align 4
@UDP_ACCELERATION_PACKET_IV_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UdpAccelCalcKey(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i32, i32* @UDP_ACCELERATION_COMMON_KEY_SIZE, align 4
  %11 = load i32, i32* @UDP_ACCELERATION_PACKET_IV_SIZE, align 4
  %12 = add nsw i32 %10, %11
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %7, align 8
  %15 = alloca i32, i64 %13, align 16
  store i64 %13, i64* %8, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %24, label %18

18:                                               ; preds = %3
  %19 = load i32*, i32** %5, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %18
  %22 = load i32*, i32** %6, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %21, %18, %3
  store i32 1, i32* %9, align 4
  br label %39

25:                                               ; preds = %21
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* @UDP_ACCELERATION_COMMON_KEY_SIZE, align 4
  %28 = call i32 @Copy(i32* %15, i32* %26, i32 %27)
  %29 = load i32, i32* @UDP_ACCELERATION_COMMON_KEY_SIZE, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %15, i64 %30
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* @UDP_ACCELERATION_PACKET_IV_SIZE, align 4
  %34 = call i32 @Copy(i32* %31, i32* %32, i32 %33)
  %35 = load i32*, i32** %4, align 8
  %36 = mul nuw i64 4, %13
  %37 = trunc i64 %36 to i32
  %38 = call i32 @Sha1(i32* %35, i32* %15, i32 %37)
  store i32 0, i32* %9, align 4
  br label %39

39:                                               ; preds = %25, %24
  %40 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %40)
  %41 = load i32, i32* %9, align 4
  switch i32 %41, label %43 [
    i32 0, label %42
    i32 1, label %42
  ]

42:                                               ; preds = %39, %39
  ret void

43:                                               ; preds = %39
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @Copy(i32*, i32*, i32) #2

declare dso_local i32 @Sha1(i32*, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
